--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,8 +5,7 @@ project:
 
 # These variables define the book contents - adjust them as necessary
 book:
-  # [A] BOOK TITLE
-  title: "THE TITLE OF THE BOOK"
+  title: "A Little Book of Data Analysis"
   reader-mode: true
   
   # The cover image and favicon; these may not need to be changed
@@ -14,26 +13,22 @@ book:
   favicon: icon_32.png
   
   # Sets the page footer text/images
-  # [B] FOOTER TEXT
   page-footer:
     left: |
-      THIS IS A SHORT PIECE OF FOOTER TEXT NAMING THE BOOK/AUTHORS
+      This book was written by Leighton Pritchard.
     right: |
       This book was built with <a href="https://quarto.org/">Quarto</a>.
 
   # Sets the URL for the repository
-  # [C] GITHUB REPOSITORY URL
-  repo-url: https://github.com/sipbs-compbiol/REPOSITORY
+  repo-url: https://github.com/sipbs-compbiol/little-data-analysis-book
   repo-branch: main
   repo-actions: [edit, issue]
 
   # Sets author information and publication/presentation date
-  # [D] AUTHOR INFORMATION AND PUBLICATION/PRESENTATION DATE
-  author: "AUTHOR NAME"
-  date: "DD/MM/YY"
+  author: "Leighton Pritchard"
+  date: "01/05/2024"
 
   # Define chapters and sections here
-  # [E] CHAPTERS AND SECTIONS
   chapters:
     - index.qmd
     - intro.qmd
