add new section/page on data visualisation
This page describes some ways of presenting data
poorly, as cautionary examples.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -37,6 +37,10 @@ book:
       chapters: 
         - causal-linear-regression.qmd
     
+    - part: datavis.qmd
+      chapters: 
+        - losing-marks.qmd
+    
     - part: late-section.qmd
       chapters: 
         - webr-example.qmd
